# techdemo-spreadsheet

./: Cargo.toml  README.md
.github/workflows/: backup.yml  client.yml  feldera.yml  restore.yml  server.yml
backup/: backup.sh  restore.sh
client/: Cargo.toml  README.md  index.html
client/src/: app.rs  cell_cache.rs  debouncer.rs  http.rs  lib.rs  main.rs  reference.rs
feldera/: backup.sh  deploy.sh  program.sql  restore.sh
feldera/udf/: Cargo.toml  udf.toml
feldera/udf/src/: lib.rs
loadtest/: img2xls.py  loadtest.py
server/: Cargo.toml  Dockerfile  fly.toml
server/src/: feldera.rs  main.rs  spreadsheet.rs  stats.rs
