[package]
name = "generic-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.31"
tokio-util = { version = "0.7.12", features = ["codec", "io"] }
reqwest = { version = "0.12.9", features = ["stream", "json"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"
chrono = "0.4.38"
dashmap = "6.1.0"
tower-http = { version = "0.6.2", features = ["cors"] }
rustrict = "0.7.33"
regex = "1.10.2"